--- a/style.css
+++ b/style.css
@@ -48,9 +48,16 @@ h5{
 }
 hr{
     margin: 18px 0px 12px 0px;
-    border-color: #883333;
-    border-width: 1px;
+   border: none; border-top: 1px solid #cccccc;
+    
 }
+/*
+border-color: #883333;
+border-style: solid;
+ border: none;
+    
+    border-top: 1px;
+*/
 .be_li{
     opacity: 0.8;
     height:25px;
