--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@
     padding:0px;
     font-size: 12px;
 }
+a:visited, a:link{
+    color: black;
+    text-decoration: none;
+}
+a:active{
+    background-color: #dddddd;
+}
 .headr{
     padding-left: 6px;
 }
