--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 a:visited, a:link{
     color: black;
-    text-decoration: none;
+    text-decoration: underline;
 }
 a:active{
     background-color: #dddddd;
